# RobotArmSimulation

./: README.md
Documentatie/Astah/: Diagrams_simulation.asta
Documentatie/latex/: Documentatie.aux  Documentatie.bbl  Documentatie.bcf  Documentatie.blg  Documentatie.fdb_latexmk  Documentatie.fls  Documentatie.run.xml  Documentatie.tex  Documentatie.toc  ref.bib
console/: CMakeLists.txt  package.xml
console/include/console/: Console.hpp
console/src/: Console.cpp  Parser.cpp  Sequence.cpp  main.cpp
robot_arm_interface/: CMakeLists.txt  package.xml
robot_arm_interface/msg/: Command.msg
simulation/: CMakeLists.txt  package.xml
simulation/include/simulation/: CupStatePublisher.hpp  Parser.hpp  PickedUpCupListener.hpp  RobotArmJointPublisher.hpp
simulation/launch/: display.launch.py  launch_file.launch.py
simulation/rviz/: urdf.rviz
simulation/src/: CSP.cpp  CupStatePublisher.cpp  Main.cpp  PUCL.cpp  Parser.cpp  PickedUpCupListener.cpp  RAJP.cpp  RobotArmJointPublisher.cpp
simulation/urdf/: lynxmotion_arm.urdf  redCup.urdf
